# 2ndGenLocoControlStand

./: .gitignore  .gitmodules  2ndGenBox.wrl  2ndGenBox_noTop.wrl  2ndGenLocoControlStand.dxf  2ndGenLocoControlStand.fcstd  2ndGenLocoControlStand.gcad  2ndGenLocoControlStand.py  2ndGenLocoControlStand.tcl  Battery.py  Boxes.py  Brackets.py  ButtonPlungers.py  Buttons.py  DaughterBoards.py  GenerateAntenna.tcl  HandHeldBoxes.py  Knobs.py  LEDs.py  Levers.py  LightSwitch.py  MechEncoders.py  NewMainBoard.py  README
ControlStand/: ControlStand.ino
ControlStandShield/: Arduino_As_Uno.kicad_pcb  ControlStandShield-cache.lib  ControlStandShield.cmp  ControlStandShield.kicad_pcb  ControlStandShield.net  ControlStandShield.pro  ControlStandShield.sch
ESP32-D0WD-V3-ControlStand/: ButtonLedPanel1.sch  ButtonLedPanel2.sch  CANTransceiver.sch  ESP32-D0WD-V3-ControlStand-V0-0.kicad_pcb  ESP32-D0WD-V3-ControlStand-cache.lib  ESP32-D0WD-V3-ControlStand.kicad_pcb  ESP32-D0WD-V3-ControlStand.pro  ESP32-D0WD-V3-ControlStand.sch  PowerSupply.sch  ProcessorSection.sch  fp-lib-table  mcp73871.lib
ESP32-S3-WROOM-ControlStand/: ButtonLedPanel1.kicad_sch  ButtonLedPanel1.sch  ButtonLedPanel2.kicad_sch  ButtonLedPanel2.sch  CANTransceiver.kicad_sch  CANTransceiver.sch  ESP32-S3-WROOM-ControlStand-cache.lib  ESP32-S3-WROOM-ControlStand-rescue.lib  ESP32-S3-WROOM-ControlStand.kicad_pcb  ESP32-S3-WROOM-ControlStand.kicad_prl  ESP32-S3-WROOM-ControlStand.kicad_pro  ESP32-S3-WROOM-ControlStand.kicad_sch  ESP32-S3-WROOM-ControlStand.net  ESP32-S3-WROOM-ControlStand.pro  ESP32-S3-WROOM-ControlStand.sch  KeypadPanel.kicad_sch  KeypadPanel.sch  PowerSupply.kicad_sch  PowerSupply.sch  ProcessorSection.kicad_sch  ProcessorSection.sch  fp-lib-table  mcp73871.lib  sym-lib-table  tca8418.lib
ESP32-S3-WROOM-ControlStand/firmware/main/: Button.cpp  Button.hxx  CMakeLists.txt  ESP32ControlStand.cpp  ESP32ControlStand.hxx  EventBroadcastHelper.hxx  LightSwitch.cpp  LightSwitch.hxx  MultiConfiguredProducer.hxx  SNIPClient.hxx  cdi.hxx  esp32s3controlstand.cpp  hardware.hxx  idf_component.yml  nvs_config.cpp
ESP32-T7S3-ControlStand/: ButtonLedPanel1.kicad_sch  ButtonLedPanel1.sch  ButtonLedPanel2.kicad_sch  ButtonLedPanel2.sch  CANTransceiver.kicad_sch  CANTransceiver.sch  ESP32-T7S3-ControlStand-cache.lib  ESP32-T7S3-ControlStand-rescue.lib  ESP32-T7S3-ControlStand.kicad_pcb  ESP32-T7S3-ControlStand.kicad_prl  ESP32-T7S3-ControlStand.kicad_pro  ESP32-T7S3-ControlStand.kicad_sch  ESP32-T7S3-ControlStand.pro  ESP32-T7S3-ControlStand.sch  ESP32_mini.lib  KeypadPanel.kicad_sch  KeypadPanel.sch  PowerSupply.kicad_sch  PowerSupply.sch  ProcessorSection.kicad_sch  ProcessorSection.sch  ap63205.lib  firmware  fp-info-cache  fp-lib-table  sw_push_small_gnd.lib  sym-lib-table
ESP32-WROOM.pretty/: ESP32_S3_WROOM-1.kicad_mod
ESP32ControlStand/: AdafruitBreakouts.mod  BiColorLed.mod  ButtonLEDPanel.sch  ButtonLedPanel2.sch  CAN_Transceiver.sch  ESP32ControlStand-cache.lib  ESP32ControlStand.cmp  Encoders.mod  (+10 more)
(+70 files in other folders)
